# torrent-to-plex

./: .gitignore  README.md  pyproject.toml
src/torrent_to_plex/: cli.py  movie.py  torrent.py  tv.py  util.py
